Promote GDB to a third-party utility

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,4 @@
 indent='    '
 not_skip = __init__.py
 force_single_line = 1
-known_third_party=capstone,unicorn,six,psutil,pycparser
+known_third_party=capstone,unicorn,six,psutil,pycparser,gdb
